# support-sop-agent

./: .env.example  .gitignore  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/agents/: __init__.py  state.py  ticket_workflow.py
apps/api/app/routes/: health.py  memory.py  mock.py  reviews.py  sops.py  tickets.py  tools.py
apps/api/app/schemas/: agent.py  health.py  memory.py  mock.py  review.py  sop.py  ticket.py  tool.py  trace.py
apps/api/app/services/: business_tool_service.py  embedding_service.py  memory_service.py  mock_data.py  review_service.py  sop_service.py  ticket_service.py  trace_service.py  vector_store.py
apps/api/tests/: test_business_tool_service.py  test_embedding_service.py  test_eval_runner.py  test_health.py  test_memory_routes.py  test_memory_service.py  test_mock_routes.py  test_review_routes.py  test_sop_routes.py  test_ticket_routes.py  test_ticket_workflow.py  test_tool_routes.py  test_vector_store.py  test_workflow_reliability.py
apps/web/: Dockerfile  README.md  index.html  package.json  vite.config.ts
evals/: __init__.py  run.py
evals/cases/: high_value_refund.yaml  invoice_missing_fields.yaml  logistics_no_update.yaml  (+1 more)
knowledge_base/: invoice_policy.md  logistics_policy.md  refund_policy.md
packaging/: windows_launcher.py
scripts/: build_windows_exe.ps1
(+3 files in other folders)
