[project]
name = "support-sop-agent-api"
version = "0.1.0"
description = "FastAPI backend for Support SOP Agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "langgraph==1.2.5",
  "PyYAML==6.0.1",
  "uvicorn[standard]==0.32.1",
  "pydantic-settings==2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
